# career-os

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: digest-sample.md
docs/: reference.md  seo-link-building.md  tier1-crawler-quality.md  tier2-crawler-coverage.md  tier3-crawler-compounding.md  trend-posts.md
presence/: cross-posting.md  github-profile.md  hire-me-page.md  linkedin.md  positioning.md
presence/prompts/: brainstorm_project.md  generate_from_idea_blog.md  generate_from_idea_linkedin.md  generate_from_idea_x.md  generate_post_blog.md  generate_post_devto.md  generate_post_linkedin.md  (+8 more)
scripts/: smoke.py
tests/: test_actions.py  test_automations.py  test_backlinks.py  test_brainstormer.py  test_cli_dashboard.py  test_crawler_watermarks.py  test_dashboard_app.py  test_dashboard_backlinks.py  test_dashboard_content_pages.py  test_dashboard_inbox.py  test_dashboard_mentions.py  test_dashboard_network.py  test_dashboard_outreach.py  test_dashboard_posts_idea_gen.py  test_dashboard_queries.py  test_dashboard_top_matches_comp.py  test_dashboard_trends.py  test_digest.py  test_drafter.py  test_email.py  test_eval.py  test_focus.py  test_hn_freelancer_extraction.py  test_ideas.py  test_improver.py  test_kpi.py  test_mention_sources.py  test_mentions.py  test_outreach.py  test_per_channel_pipeline.py  test_post_studio.py  test_posts.py  test_recheck.py  test_salary.py  test_store.py  test_todos.py  test_tracker.py  test_trend_actions.py  test_trend_generator.py  test_trend_sources.py  (+4 more)
(+78 files in other folders)
