[project]
name = "career-os"
version = "0.1.0"
description = "AI-agent system that crawls opportunities, scores them, and drafts applications. Built in public by Bakhouche Akram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bakhouche Akram", email = "me@bak-dev.com" }]
keywords = ["claude", "agents", "job-search", "freelance", "build-in-public"]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "respx>=0.21.1",
]

[project.scripts]
career-os = "career_os.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_os"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
